fix semantic and align of low elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,16 @@
 
 @font-face{
 		font-family: 'Pacifico';
-		src: url('fonts/Pacifico.ttf');
+		src: url('../fonts/Pacifico.ttf');
 }
 
 @font-face{
 		font-family: 'Roboto';
-		src: url('fonts/Roboto.ttf');
+		src: url('../fonts/Roboto.ttf');
 }
 
 body {
-		background-image: url("img/todo.jpeg");
+		background-image: url("../img/todo.jpeg");
 		background-position: center;
 		background-size: cover;
 		font-size: 62.5px;
@@ -19,30 +19,18 @@ body {
 		color: #808080;
 }
 
-element .style{
-		line-height: 15px;
-		align-items: center;
+.firstElement, .secondElement {
+	height: 100vh;
+	margin: auto;
+	padding: 20px;
+	align-items: center;
 }
 
-.firstElement {
-		height: auto;
-		margin: auto;
-		padding: 20px;
-		align-items: center;
-}
-
-.firstElement, .secondElement, {
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.firstElement header h1 {
+.welcomeTitle {
 	color: rgba(0, 127, 255, 0.4);
-	padding: 120px;
+	padding: 240px 0 ;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 .arrowDown {
@@ -61,64 +49,64 @@ element .style{
 }
 
 .header {
+	display: block;
+	margin: auto;
 	width: 900px;
-	margin: 30px;
 	padding: 30px;
 }
 
-.header2 {
-		width: 100%;
-		margin: 0px auto 20px auto;
-		padding: 20px;
-		background-color: rgba(0, 127, 255, 0.4);
+.addTaskForm {
+	display: block;
+	width: 600px;
+	margin: auto;
+	padding: 10px;
+	height: 80px;
+	background-color: rgba(0, 127, 255, 0.4);
 }
 
-input {
-		float: left;
-		width: 300px;
-		margin: 0px 10px 0px 10px;
-		text-align: center;
-		padding: 5px;
-		background-color: white;
-		outline: 3px double #0055BB;
+.taskName, .taskContent {
+	padding: 5px;
+	box-sizing: border-box;
+	height: 30px;
 }
 
-input:focus {
-		background-color: #FFF;
+.taskName {
+	width: 30%;
+	float: left;
 }
 
-textarea {
-		float: left;
-		height: 18px;
-		width: 450px;
-		margin: 0px 10px 0px 10px;
-		padding: 5px;
-		text-align: center;
-		background-color: white;
-		outline: 3px double #0055BB;
+.taskName:focus {
+	background-color: #FFF;
 }
 
-textarea:focus {
-		background-color: #FFF;
+.taskContent {
+	width: 65%;
+	float: right;
 }
 
-button {
-		height: 25px;
-		width: 150px;
-		margin: 10px;
-		border: 2px solid #0055BB;
-		background-color: rgba(128, 128, 128, 0.4);
-	}
+.taskContent:focus {
+	background-color: #FFF;
+}
 
-button:hover {
+.addTaskBtn {
+	height: 25px;
+	width: 150px;
+	border: 2px solid #0055BB;
+	background-color: rgba(128, 128, 128, 0.4);
+	margin-top: -20px;
+	float: left;
+	margin-top: 20px;
+}
+
+.addTaskBtn:hover {
 	background-color: #0055BB;
 }
 
-.buttonClass:hover, .buttonClass:focus {
+.addTaskBtn:hover, .addTaskBtn:focus {
     background: yellow;
 }
 
-h4 {
+.taskTitleHeader {
 		margin: auto;
 		font-size: 2.0rem;
 		text-align: center;
@@ -127,15 +115,15 @@ h4 {
 }
 
 .container {
-		height: auto;
-		width: 600px;
-		margin: auto;
-		padding: 10px;
-		background-color: rgba(0, 127, 255, 0.4);   
+	height: auto;
+	width: 600px;
+	margin: 20px auto;
+	padding: 10px;
+	background-color: rgba(0, 127, 255, 0.4);
 }
 
 
-.box h3 {
+.boxTitle {
 		font-size: 1.7rem;
 		text-align: center;
 }
@@ -151,18 +139,19 @@ h4 {
 		border-color: #0055BB;
 }
 
-footer {
-		position: fixed;
-		left:0px;
-		bottom: 0px;
-		height: 30px;
-		width: 100%;
-		margin: 20px auto 0px auto;
-		padding: 10px;
-		font-size: 1.5rem;
-		text-align: center;
-		background-color: rgba(0, 127, 255, 0.4);
-		font-family: 'Pacifico';
+.mainFooter {
+	color: #FFF;
+	position: fixed;
+	left:0px;
+	bottom: 0px;
+	height: 30px;
+	width: 100%;
+	margin: 20px auto 0px auto;
+	padding: 10px;
+	font-size: 1.5rem;
+	text-align: center;
+	background-color: rgba(0, 127, 255, 0.4);
+	font-family: 'Pacifico';
 }
 
 @media screen and (min-width:320px) and (max-width:480px) {
@@ -235,7 +224,7 @@ footer {
 				border-left-style: double;
 				border-bottom-style: double;
 				border-color: #0055BB;
-			 
+
 		}
 		footer {
 				width: 100%;
